--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body data-new-gr-c-s-check-loaded="14.1082.0" data-gr-ext-installed="">
+<body>
     <div class="header">
         <header>
-            <h1 style="display:flex; flex-flow: column; align-items: center;">Tahir's Servers</h1>
-            <img src="" alt="Logo of Tahir's Servers">
+            <h1 style="display:flex; flex-flow: column; align-items: center; justify-content: center; height: 7vw;">Tahir's Servers</h1>
+            <img src=images/tahirsserverslogo.jpg alt="Logo of Tahir's Servers" style="width: 15vw; display:block; position:absolute; top: 1vw; left:.25vw; border: solid; border-color: black;">
         </header>
     </div>
 
@@ -28,7 +28,7 @@
                 <div class="boxContent">
                     <h3>Minecraft Java Edition Server</h3>
                     <p>Come play Java at:</p>
-                    <p>Message For Server IP</p>
+                    <p>Join the Discord for IP</p>
                 </div>
             </div>
             <br>
