ADDED EMERGENCY SERVERS DOWN MESSAGE

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <header>
             <h1 style="display:flex; flex-flow: column; align-items: center; justify-content: center; height: 6.75vw;">Tahir's Servers</h1>
-            <img src=images/tahirsserverslogo.jpg alt="Logo of Tahir's Servers" style="width: 15vw; display:block; position:absolute; top: 1vw; left:.25vw; border: solid; border-color: black;">
+            <img src=images/tahirsserverslogo.jpg alt="Logo of Tahir's Servers" style="width: 15vw; display:block; position:absolute; top: 1vxw; left:.25vw; border: solid; border-color: black;">
         </header>
     </div>
 
@@ -29,6 +29,7 @@
                     <h3>Minecraft Java Edition Server</h3>
                     <p>Come play Java at:</p>
                     <p>Join the Discord for IP</p>
+                    <p><b>HAHA ISP BLOCKED PORT FORWDING ALL GAME SERVERS ARE DOWN</b></p>
                 </div>
             </div>
             <br>
@@ -38,6 +39,7 @@
                     <p>Come play bedrock at: </p>
                     <p>PlayBedrock.tahirsservers.online</p>
                     <p>(In development come back soon)</p>
+                    <p><b>HAHA ISP BLOCKED PORT FORWDING ALL GAME SERVERS ARE DOWN</b></p>
                 </div>
             </div>
             <br>
@@ -48,6 +50,7 @@
                     <p>PlayModded.tahirsservers.online</p>
                     <a href="">List of Mods</a>
                     <p>(In development come back soon)</p>
+                    <p><b>HAHA ISP BLOCKED PORT FORWDING ALL GAME SERVERS ARE DOWN</b></p>
                 </div>
             </div>
             <br>
