ADDED EMERGENCY SERVERS DOWN MESSAGE

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="boxContent">
                     <h3>Minecraft Java Edition Server</h3>
                     <p>Come play Java at:</p>
-                    <p>Join the Discord for IP</p>
+                    <p>Play.tahirsservers.online</p>
                     <p><b>HAHA ISP BLOCKED PORT FORWDING ALL GAME SERVERS ARE DOWN</b></p>
                 </div>
             </div>
