--- a/index.html
+++ b/index.html
@@ -1,95 +1,4 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">Tahir's Servers</title>
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-</head>
-
-<body>
-    <div class="header">
-        <header>
-            <h1 id="title" style="color: C49BBB;">Tahir's Servers</h1>
-        </header>
-
-    </div>
-
-
-    <div class="boddy">
-        <div class="serverBoxes">
-            <div class="boxIndividual">
-                <div class="boxContent">
-                    <h3>Minecraft Java Edition Server</h3>
-                    <p>Come play Java</p>
-                    <p>Fill out the form to be whitelisted</p>
-                    <a href="SubSites/javaForm.html">Click Here</a>
-                </div>
-            </div>
-            <br>
-            <div class="boxIndividual">
-                <div class="boxContent">
-                    <h3>Modded Minecraft Server</h3>
-                    <p>Come Play with Mods at:</p>
-                    <p>PlayModded.tahirsservers.online</p>
-                    <a href="">List of Mods</a>
-                    <p>(In development come back soon)</p>
-                </div>
-            </div>
-            <br>
-        </div>
-        <div class="end">
-            <div class="discordBox">
-                <h3>Join the Discord!</h3>
-                <a href="https://discord.gg/ptxdbKSCcx">https://discord.gg/ptxdbKSCcx</a>
-            </div>
-            <br><br>
-            <div class="suggestions">
-                <form action="https://docs.google.com/forms/d/e/1FAIpQLSdT6C6a5gnqFIsQOFZisLh8b0hXgMXA2ICCMnelRcTcMyO-ug/formResponse?" id="myform">
-                    <label for="suggestion">Suggestions?</label>
-                    <input type="text-field"name="entry.1781592938" id="suggestion">
-                    <input type="submit" value="Submit" onclick="rSet()" >
-                </form>
-            </div>
-
-        </div>
-        <br><br><br>
-        <p id="resultMessage">P.S THIS IS STILL IN DEVELOPMENT</p>
-    </div>
-    <script>
-        $(document).ready(function() {
-            $('#myform').submit(function(e) {
-                e.preventDefault(); // Prevent the default form submission
-                var formData = $(this).serialize(); // Serialize the form data
-                $.ajax({
-                    type: 'POST',
-                    url: $(this).attr('action'),
-                    data: formData,
-                    success: function(response) {
-                       console.log("BRUH")  
-                    },
-                    error: function() {
-                    rSet();
-                    }
-                });
-            });
-        });
-        function rSet(){
-            console.log("BRO");
-            var form = document.getElementById('myform');
-        var suggestionInput = document.getElementById('suggestion');
-        var resultMessage = document.getElementById('resultMessage');
-        suggestionInput.innerText='';
-        resultMessage.innerHTML = "FORM SUBMITTED";
-        setTimeout(function() {
-        resultMessage.innerHTML = "P.S THIS IS STILL IN DEVELOPMENT";
-}, 2000);
-    }
-
-    </script>
-
-</body>
-
+<html>
+    <h1>BOINK</h1>
+    <h2>This site is under development BOINK</h2>
 </html>
